# C-CXX-Project-template

./: .gitignore  BuildAutomation.py  CMakeLists.txt  DummyProject.cmake
scripts/: build.sh  clear.sh  generate-project-files.sh  rebuild.sh  run-conan.sh
src/tests/: Foo.cpp
